correcting alignment

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ background-size: cover;
 .title {
   text-align: center;
   font-family: 'Dancing Script', cursive;
+  padding-bottom: 30px;
 }
 .btn {
   vertical-align: inherit;
@@ -23,12 +24,7 @@ background-size: cover;
 }
 body {
   margin-top: 30px;
-}
-.navbar-inverse .navbar-brand {
-  font-family: 'Bungee Shade';
-  font-size: 36px;
-  color: #ff3061;
-  padding-top: 20px;
+  padding-bottom: 40px;
 }
 h1 {
   color: blue;
@@ -42,19 +38,6 @@ h3 {
   text-align: center;
   font-family: 'Dancing Script', cursive;
 }
-.rating {
-  font-size: 0.4em;
-  text-transform: uppercase;
-  border: 1px solid #ccc;
-  padding: 4px;
-  vertical-align: middle;
-}
-.summary h2, .actors h2 {
-  margin-top: 0;
-}
-.actors li {
-  line-height: 24px;
-}
-.review {
-  margin-bottom: 30px;
+.secondimage {
+  padding-top: 30px;
 }
